--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-bottom: 40px;
 }
 
 .consult {
@@ -150,6 +151,7 @@ body::-webkit-scrollbar {
 
 .ratings-star {
   display: flex;
+  gap: 4;
 }
 
 .ratings-star i {
@@ -223,7 +225,9 @@ select:focus {
   font-size: 18px; /* Font size */
   color: #333333; /* Text color */
 }
-
+.btnText{
+  margin-top: 32px;
+}
 #next-button-component {
   width: 100%;
   background-color: #f3aa50;
@@ -354,17 +358,33 @@ footer {
 #section2-component2 {
   display: none;
 }
+#policy2-container {
+  display: none;
+}
+#tou2-container {
+  display: none;
+}
 
 @media only screen and (max-width: 767px) {
   .card-container {
+    background: #fff;
     flex-direction: column;
     width: 100%;
-    margin-bottom: 30px;
+    padding-bottom: 20px;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    margin: 0 20px 30px 20px;
+    justify-content: center;
+    align-items: center;
   }
  
 
   #section1-component  {
     order: 1;
+    margin-top: 24px;
   }
 
   #section2-component {
@@ -374,16 +394,57 @@ footer {
   #section2-component2 {
     display: block;
     order: 3;
+    margin-top: 24px;
+  }
+  #policy-container{
+    display: none;
+  }
+  #policy2-container{
+    display: block;
+    order: 4;
+    margin-bottom: 24px;
+  }
+  #tou-container{
+    display: none;
+  }
+  #tou2-container{
+    display: block;
+    order: 4;
+    margin-bottom: 24px;
   }
   .card-40{
     width: 100%;
+    padding: 0;
+    background: transparent;
+    
   }
   .card-60 {
     width: 100%;
     order: 2;
+    padding: 0;
   }
 
- 
+
+  #next-button-component {
+    box-shadow: 0px 4px 20px 0px;
+
+  }
+  .footerText {
+    padding: 0;
+    width: 100%;
+  }
+  .footerGroup{
+    width: 100%;
+    
+  }
+
+  footer {
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 0px;
+    justify-content: center;
+    text-align: center;
+  }
 
   .consult-text {
     font-size: 24px;
@@ -403,7 +464,8 @@ footer {
   footer {
     font-size: 12px;
     padding-bottom: 0;
-    height: 100%;
+    height: fit-content;
+    padding: 10px;
   }
 
   .footerText {
@@ -418,11 +480,8 @@ footer {
 
   .recaptchaGroup {
     width: 25%;
-    position: -webkit-sticky; 
-    position: sticky;
-    bottom: 100px;
+    bottom: 0px;
     right: 0;
-    align-self: flex-end; 
     margin: 0;
   }
 
